--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       logo: '_media/logo.png',
       coverpage: false,
       loadSidebar: true,
+      loadNavbar: true,
       search: {
           paths: 'auto',
           placeholder: 'Pesquisar',
