--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       name: 'Base de Conhecimento Uqbar',
       repo: '',
       logo: '_media/logo.png',
+      coverpage: true,
       coverpage: false,
       loadSidebar: true,
       loadNavbar: true,
