--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       name: 'Base de Conhecimento Uqbar',
       repo: '',
       logo: '_media/logo.png',
-      coverpage: true,
-      coverpage: false,
+      coverpage: '_coverpage.html',
+      onlyCover: true,
       loadSidebar: true,
       loadNavbar: true,
       search: {
