--- a/_coverpage.html
+++ b/_coverpage.html
@@ -1,25 +1,20 @@
 <section id="cover-page" class="cover-page">
 
     <h1>Base de Conhecimento da Uqbar</h1>
-
-    <svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-      </svg>
-
     <h2>Texto Descritivo</h2>
 
     <div class="cover-link-container">
         <a class="cover-link" href="/#/README">
-            <button class="big-button">Glossário</button>
+            <button class="button-grow">Glossário</button>
         </a>
         <a class="cover-link" href="/#/5_Privacy_Respecting_Software">
-            <button class="big-button">Metodologia</button>
+            <button class="button-grow">Metodologia</button>
         </a>
         <a class="cover-link" href="/#/6_Privacy_and-Security_Gadgets">
-            <button class="big-button">Explicador</button>
+            <button class="button-grow">Explicador</button>
         </a>
         <a class="cover-link" href="/#/4_Privacy_And_Security_Links">
-            <button class="big-button">don't</button>
+            <button class="button-grow">Links</button>
         </a>
     </div>
 
