--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       name: 'Base de Conhecimento Uqbar',
       repo: '',
       logo: '_media/logo.png',
-      coverpage: '_coverpage.html',
+      coverpage: '_coverpage.md',
       onlyCover: true,
       loadSidebar: true,
       loadNavbar: true,
